--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": {
     "url": "https://github.com/yanggaoji/mini-spell-checker.git"
   },
-  "version": "1.0.1",
+  "version": "1.0.2",
   "publisher": "MagicalCarl",
   "license": "MIT",
   "engines": {
@@ -18,6 +18,10 @@
     "*"
   ],
   "main": "./extension.js",
+  "scripts": {
+    "package": "vsce package",
+    "publish": "vsce publish"
+  },
   "contributes": {
     "commands": [
       {
@@ -53,6 +57,17 @@
             "type": "string"
           },
           "description": "List of languages in which the spell checker should be enabled."
+        },
+        "miniSpellChecker.severityLevel": {
+          "type": "string",
+          "enum": [
+            "error",
+            "warning",
+            "information",
+            "hint"
+          ],
+          "default": "information",
+          "description": "The severity level for spelling errors (error = red, warning = yellow, information = blue, hint = light blue)"
         }
       }
     },
